--- a/style.css
+++ b/style.css
@@ -190,6 +190,7 @@
             justify-content: space-between;
             align-items: center;
             height: 90px;
+            z-index: 1002;
         }
         .now-playing {
             display: flex;
