--- a/movies.css
+++ b/movies.css
@@ -58,7 +58,7 @@
     top: 0;
     right: -100%;
     width: 90%;
-    max-width: 800px;
+    max-width: 58.5%;
     height: 100vh;
     background: var(--spotify-black);
     transition: right var(--transition-speed);
@@ -92,8 +92,6 @@
     padding: 10px 15px;
 }
 
-
-
 .modal-search {
     padding: 20px;
     display: flex;
@@ -116,6 +114,15 @@
     border: none;
     border-radius: 4px;
     cursor: pointer;
+}
+
+.main-cont{
+    overflow-y: auto;
+    height: auto;
+    height: 85%;
+    padding: 10px;
+    background-color: var(--spotify-black);
+
 }
 
 /* Movies Tabs */
