--- a/movies.css
+++ b/movies.css
@@ -223,7 +223,7 @@
 }
 
 .movie-details-btn:hover {
-    background: rgba(var(--spotify-green-rgb), 0.8);
+    background-color: var(--rating-color);
 }
 
 .movie-info {
