--- a/style.css
+++ b/style.css
@@ -1294,14 +1294,14 @@
                 
                 .music-thumbnail {
                     position: relative;
-                    width: 100%;
-                    height: 100%;
+                    width: 70px;
+                    height: 70px;
 
                 }
                 
                 .music-thumbnail img {
                     width: 70px;
-                    height: 71px;
+                    height: 70px;
                     object-fit: cover;
                 }
                 
@@ -1312,7 +1312,7 @@
                     right: 0;
                     bottom: 0;
                     width: 70px;
-                    height: 71px;
+                    height: 77px;
                     background-color: rgba(0, 0, 0, 0.5);
                     display: flex;
                     justify-content: center;
@@ -1334,6 +1334,7 @@
                     padding: 12px;
                     margin-left: 10px;
                     width: 80%;
+                    flex-grow: 1;
                 }
                 
                 .music-info h3 {
@@ -1341,7 +1342,6 @@
                     font-size: 14px;
                     margin: 0 0 8px 0;
                     overflow: hidden;
-                    flex-grow: 1;
                     text-overflow: ellipsis;
                     white-space: nowrap;
                 }
